--- a/town_hall/styles/c07x_speaker.css
+++ b/town_hall/styles/c07x_speaker.css
@@ -1,13 +1,13 @@
-/* the styles for the elements */
+/* General Styles */
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 html {
-	background-color: white;
+    background-color: white;
 }
 body {
-	font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 850px;
     margin: 0 auto;
@@ -15,139 +15,101 @@ body {
     background-color: #fffded;
 }
 a:focus, a:hover {
-	font-style: italic;
+    font-style: italic;
 }
-/* the styles for the header */
+
+/* Header Styles */
 header {
-	padding: 1.5em 0 2em 0;
-	border-bottom: 3px solid #931420;
-	background-image: linear-gradient(
-	    30deg, #f6bb73 0%, #fffded 30%, white 50%, #fffded 80%, #f6bb73 100%);
+    padding: 1.5em 0 2em 0;
+    border-bottom: 3px solid #931420;
+    background-image: linear-gradient(30deg, #f6bb73 0%, #fffded 30%, white 50%, #fffded 80%, #f6bb73 100%);
 }
 header h2 {
-	font-size: 175%;
-	color: #800000;
+    font-size: 175%;
+    color: #800000;
 }
 header h3 {
-	font-size: 130%;
-	font-style: italic;
+    font-size: 130%;
+    font-style: italic;
 }
 header img {
-	float: left;
-	padding: 0 30px;
+    float: left;
+    padding: 0 30px;
 }
 .shadow {
-	text-shadow: 2px 2px 2px #800000;
-}
-/* the styles for the main content */
-main {
-	clear: left;
+    text-shadow: 2px 2px 2px #800000;
 }
 
-/* the styles for the section */
+/* Main Content */
+main {
+    clear: left;
+}
+
+/* Section Styles */
 section {
-	width: 575px;
-	float: right;
-	padding: 0 20px 20px 20px;
+    width: 575px;
+    float: right;
+    padding: 0 20px 20px 20px;
 }
 section h1 {
-	color: #800000;
-	font-size: 150%;
-	padding-top: .5em;
-	margin: 0;
+    color: #800000;
+    font-size: 150%;
+    padding-top: .5em;
+    margin: 0;
 }
 section p {
-	padding-bottom: .5em;
+    padding-bottom: .5em;
 }
 
-/* the styles for the article */
+/* Article Styles */
 article {
-	padding: .5em 0;
+    padding: .5em 0;
 }
 article h2 {
-	font-size: 115%;
-	padding: 0 0 .25em 0;
+    font-size: 115%;
+    padding: 0 0 .25em 0;
 }
 article img {
-	float: right;
-	margin: .5em 0 1em 1em;
-	border: 1px solid black;
+    float: right;
+    margin: .5em 0 1em 1em;
+    border: 1px solid black;
 }
 
-/* the styles for the aside */
-aside {
-	width: 215px;
-	float: right;
-	padding: 0 0 20px 20px;
+/* Navigation Menu */
+#nav_list {
+    padding: 1em 0;
 }
-aside h2 {
-	color: #800000;
-	font-size: 130%;
-	padding: .6em 0 .25em 0;
+#nav_list ul {
+    list-style: none;
+}
+#nav_list li {
+    margin-bottom: 0.5em;
+}
+#nav_list a {
+    display: block;
+    padding: 0.5em;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 2px 5px #800000;
+}
+#nav_list a:hover {
+    background-color: #f0e6e6;
+}
+#nav_list a:focus, #nav_list a.current {
+    color: #800000;
+    font-weight: bold;
 }
 
-aside h3 {
-	font-size: 105%;
-	padding-bottom: .25em;
-}
-aside img {
-	padding-bottom: 1em;
-}
-
-/* the styles for the footer */
+/* Footer Styles */
 footer {
-	background-color: #931420;
-	clear: both;
-
+    background-color: #931420;
+    clear: both;
 }
 footer p {
-	text-align: center;
-	color: white;
-	padding: 1em 0;
+    text-align: center;
+    color: white;
+    padding: 1em 0;
 }
-/* Navigation styles */
-#nav_list ul {
-	list-style-type: none;
-	padding: 0;
-}
-
-#nav_list ul li {
-	margin: 10px 0;
-}
-
-#nav_list ul li a {
-	display: block;
-	padding: 10px;
-	border: 1px solid black;
-	border-radius: 8px;
-	background-color: #ffffff;
-	text-decoration: none;
-	color: black;
-	font-size: 1rem;
-	box-shadow: 2px 2px 5px #800000;
-	position: relative;
-}
-
-#nav_list ul li a:hover, 
-#nav_list ul li a:focus {
-	background-color: #800000;
-	color: white;
-}
-
-#nav_list ul li a.active {
-	color: #800000;
-}
-
-#nav_list ul li a::after {
-	content: '';
-	background-image: url('../images/right.jpg');
-	background-repeat: no-repeat;
-	background-position: center;
-	position: absolute;
-	right: 10px;
-	top: 50%;
-	transform: translateY(-50%);
-	width: 20px;
-	height: 20px;
-}
-
